fixed the participant id button spacing

--- a/react-app/src/components/Stats/Stats.css
+++ b/react-app/src/components/Stats/Stats.css
@@ -10,7 +10,8 @@
 }
 
 .inputContainer{
-    width: 50%
+    width: 50%;
+    margin: 10px;
 }
 
 .inputContainer * {
